# ShellHistoryConvert

./: README.md  meson.build
src/: bashhistoryitem.vala  fishhistoryitem.vala  historyconverter.vala  historyparsers.vala  main.vala  meson.build  version.vala.in  zshhistoryitem.vala
